--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
 
     <nav class="navbar bg-body-terciary p-3">
         <div class="container-fluid nav justify-content-center">
-            <ul class="nav ms-5 nav-underline">
+            <ul class="nav nav-underline">
                 <li class="nav-item">
                     <a href="index.html" class="nav-link active">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="listarLivros.html" class="nav-link">Listar livros</a> 
+                    <a href="views/listarLivros.html" class="nav-link">Listar livros</a> 
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Cadastrar livros</a>
+                    <a href="views/cadastrarLivros.html" class="nav-link">Cadastrar livros</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Deletar livro</a>
+                    <a href="views/deletarLivros.html" class="nav-link">Deletar livro</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Atualizar livro</a>
+                    <a href="views/atualizarLivros.html" class="nav-link">Atualizar livro</a>
                 </li>
             </ul>
         </div>
